--- a/css/custom.css
+++ b/css/custom.css
@@ -3,10 +3,11 @@
 }
 
 .jumbotron {
+    height: 1000px;
     background-image: url(../img/home.jpg);
     background-position: 0% 25%;
-    background-size: auto 100%;
-    height: 1500px;
+    background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    text-align: center;
 }
