--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,17 @@
     margin-bottom: 0;
 }
 
+.navbar-brand {
+    padding-top: 5px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#logo {
+    width: 50px;
+    padding-right: 10px;
+}
+
 .navbar-inverse {
 	background: #2E2F31;
 	border: 0;
