--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .navbar {
     margin-bottom: 0;
 }
@@ -20,6 +24,8 @@
 
 .navbar-inverse .navbar-nav li a {
 	color: #f7f7f7;
+    --padding-left: 30px;
+    --padding-right: 30px;
 	font-size: 18px;
 }
 .navbar-inverse .navbar-nav li a:hover {
