--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.googlemap {
+    height: 70%;
+    width: 70%;
+}
+
 .navbar {
     margin-bottom: 0;
 }
