--- a/css/custom.css
+++ b/css/custom.css
@@ -12,9 +12,10 @@ body {
 }
 
 .navbar-brand {
-    padding-top: 5px;
+    padding-top: 7px;
     font-size: 24px;
     font-weight: bold;
+    color: #ffffff;
 }
 
 #logo {
@@ -31,7 +32,7 @@ body {
 	color: #a6a6a6;
     --padding-left: 30px;
     --padding-right: 30px;
-	font-size: 18px;
+	font-size: 20px;
 }
 .navbar-inverse .navbar-nav li a:hover {
 	color: #f7f7f7;
@@ -45,6 +46,10 @@ body {
     color: #f7f7f7;
 }
 
+.navbar-nav li:first-child::before {
+    content: '';
+}
+
 .jumbotron {
     height: 950px;
     background-image: url(../img/home2.jpg);
@@ -53,6 +58,15 @@ body {
     background-repeat: no-repeat;
     color: white;
     text-align: center;
+}
+
+.input-group-xlg, .input-xlg, .btn-xlg {
+    height: 70px;
+    font-size: 32px;
+}
+
+.btn-xlg {
+    width: 70px;
 }
 
 .vcenter {
