--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,7 @@ body {
     margin-bottom: 0;
 }
 
-.navbar-brand {
+.navbar-inverse .navbar-brand {
     padding-top: 7px;
     font-size: 24px;
     font-weight: bold;
