--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,10 +67,6 @@ html#home-page {
     text-align: center;
 }
 
-body {
-    text-align: center;
-}
-
 .input-group-xlg, .input-xlg, .btn-xlg {
     height: 70px;
     font-size: 32px;
@@ -104,12 +100,19 @@ h1#discover {
     CAMPSITE SEARCH STYLING
 ***/
 
-.campsearch {
-  height: 100%;
-  width: 100%;
+#map-options {
+    float: left;
+    margin-left: 15px;
+    margin-top: 25px;
+    display: inline;
 }
 
 #map {
-height: 80%;
-width: 70%;
+    margin-top: 50px;
+    margin-right: 50px;
+    height: 720px;
+    width: 1400px;
+    float: right;
+    border: 8px solid;
+    display: inline;
 }
