--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -104,19 +104,24 @@ h1#discover {
     width: 22px;
 }
 
+#campsearch-body {
+    margin-top: 25px;
+}
+
 #map-options {
     float: left;
-    margin-left: 15px;
-    width: 90%;
-    margin-top: 25px;
+    margin-left: 25px;
+    width: 92%;
+    height: 60em;
     display: inline;
+    border: 2px solid #000;
 }
 
 #map {
-    margin-top: 60px;
+    background-color: #000;
     margin-right: 50px;
-    height: 720px;
-    width: 100%;
+    height: 60em;
+    width: 97%;
     float: right;
     border: 8px solid;
     display: inline;
