--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -115,6 +115,7 @@ h1#discover {
     height: 55em;
     display: inline;
     border: 2px solid #000;
+    overflow-y: scroll;
 }
 
 #map {
@@ -122,7 +123,7 @@ h1#discover {
     margin-right: 50px;
     height: 55em;
     width: 97%;
-    float: right;
+    float: left;
     border: 8px solid;
     display: inline;
 }
