--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -113,12 +113,12 @@ h1#discover {
     margin-left: 5%;
     width: 92%;
     height: 55em;
-    
+
     display: inline;
     position: relative;
     overflow: hidden;
     border: 2px solid #000;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #map {
@@ -131,8 +131,6 @@ h1#discover {
     display: inline;
 }
 
-
-
-
-
-
+#campsites-list ul {
+    list-style-type: none;
+}
