--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -131,6 +131,17 @@ h1#discover {
     display: inline;
 }
 
+#campsites-list, #campsites-list ul {
+    margin: 0;
+    padding: 0;
+    padding-top: 10px;
+}
+
 #campsites-list ul {
     list-style-type: none;
+}
+
+.campsite-name {
+    font-size: 20px;
+    font-weight: bold;
 }
