--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -169,28 +169,18 @@ h1#discover {
 }
 
 #info-header {
-    text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
 }
 
-.campsite-name {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.table-condensed,th, td {
-     border: 1px solid black;
-     text-align: center;
-}
-.table-condensed tr: 2th-child {
-     height: 100px;
+#campsite-body {
+    width: 70vw;
 }
 
 .slider {
     text-align: center;
     border: 3px solid #000;
-    width: 60vw;
+    width: 65vw;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2vh;
@@ -200,6 +190,53 @@ h1#discover {
     height: 64vh;
     text-align: center;
 }
+
+.stars-container {
+  position: relative;
+  display: inline-block;
+  color: transparent;
+}
+
+.stars-container:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '★★★★★';
+  color: lightgray;
+}
+
+.stars-container:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '★★★★★';
+  color: grey;
+  overflow: hidden;
+}
+
+.stars-0:after { width: 0%; }
+.stars-10:after { width: 10%; }
+.stars-20:after { width: 20%; }
+.stars-30:after { width: 30%; }
+.stars-40:after { width: 40%; }
+.stars-50:after { width: 50%; }
+.stars-60:after { width: 60%; }
+.stars-70:after { width: 70%; }
+.stars-80:after { width: 80%; }
+.stars-90:after { width: 90%; }
+.stars-100:after { width: 100; }
+
+.table-condensed,th, td {
+     border: 1px solid black;
+     text-align: center;
+}
+.table-condensed tr: 2th-child {
+     height: 100px;
+}
+
+/*
+    ???
+*/
 .col-sm-1half, .col-sm-8half, .col-sm-longer, .bottom-right, .whole_row, .leftmost {
     position: relative;
     min-height: 1px;
