testing if table weather works

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -220,14 +220,15 @@ h1#discover {
 .stars-90:after { width: 90%; }
 .stars-100:after { width: 100; }
 
+/*
+Weather Table
+*/
 .table-condensed{
-    /*float: right;*/
-    position: absolute;
+    float: right;
     margin-top: 30px;
     /*right change to 17 if align with picture above*/
-    right: 16%;
-    height: 0%;
-    width: 0%;
+    margin-right: 2vw;
+    /*width: 0%;*/
 }
 .table-condensed ,th, td {
     border: 1px solid black;
