--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -197,6 +197,8 @@ h1#discover {
   left: 0;
   content: '★★★★★';
   color: lightgray;
+  height: 5px;
+  width: 15px;
 }
 
 .stars-container:after {
@@ -204,7 +206,7 @@ h1#discover {
   top: 0;
   left: 0;
   content: '★★★★★';
-  color: grey;
+  color: darkgrey;
   overflow: hidden;
 }
 
@@ -225,9 +227,9 @@ Weather Table
 */
 .table-condensed{
     float: right;
-    margin-top: 30px;
+    margin-top: 3vh;
     /*right change to 17 if align with picture above*/
-    margin-right: 2vw;
+    margin-right: 17vw;
     /*width: 0%;*/
 }
 .table-condensed ,th, td {
@@ -269,4 +271,20 @@ Weather Table
     }
 
 }
-#
+.fb-share-button {
+    
+    float: left;
+}
+
+/* 
+size of rating and stars
+ */
+#ratingText {
+    font-size: 22px;
+}
+
+
+
+
+
+
