--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -130,6 +130,10 @@ input[type='checkbox'] {
     font-size: 22px;
 }
 
+select.form-control {
+    width: 130px;
+}
+
 #map {
     background-color: #000;
     height: 88vh;
@@ -153,6 +157,12 @@ input[type='checkbox'] {
     padding-top: 2em;
     margin-right: 2em;
     width: 170px;
+}
+
+.campsite-img-thumbnail {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /***
@@ -312,14 +322,12 @@ size of rating and stars
 
 .campicons {
     float: left;
-    margin-top: 2vh; 
+    margin-top: 2vh;
     margin-left: 1vw;
 }
 #facility {
     float: left;
-    margin-top: 2vh; 
+    margin-top: 2vh;
     margin-left: 0.5vw;
     font-size: 20px;
 }
-
-
