--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -193,10 +193,13 @@ select.form-control {
 }
 
 #campsites-list, #campsites-list ul {
+    padding-top: 20px;
     padding-left: 0;
 }
 
 #campsites-list ul li {
+    font-size: 16px;
+    border-top: 1px solid #d6d6d6;
     padding-top: 0;
     list-style-type: none;
 }
@@ -319,6 +322,7 @@ Weather Table
     font-family: tahoma;
     width: 25vw;
 }
+
 /*
 back button
 */
@@ -330,44 +334,6 @@ back button
     font-size: 22px;
 }
 
-
-
-
-
-/*
-    ???
-*/
-.col-sm-1half, .col-sm-8half, .col-sm-longer, .bottom-right, .whole_row, .leftmost {
-    position: relative;
-    min-height: 1px;
-}
-
-@media (min-width: 768px) {
-
-    .col-sm-1half {
-        width: 2%;
-    }
-    .col-sm-8half {
-        width: 70.83333333%;
-    }
-
-    .col-sm-longer {
-        width: 31.3%
-    }
-
-    .bottom-right {
-        width: 50%
-    }
-
-    .whole_row {
-        width: 77%
-    }
-
-    .leftmost {
-        width: 11%
-    }
-
-}
 /*
 share buttons - facebook and twitter
 */
